cmake_minimum_required(VERSION 3.9)
project(CppPlayground)

set(CMAKE_CXX_STANDARD 17)

add_executable(CppPlayground main.cpp lesson6_arrays.cpp lesson6_arrays.h lesson7_functions.cpp lesson7_functions.h lesson8_classes.cpp lesson8_classes.h TickTacToe.cpp TickTacToe.h lesson9_overloading.cpp lesson9_overloading.h raw_types.cpp raw_types.h lesson10_templates.cpp lesson10_templates.h lesson12_polymorphism.cpp lesson12_polymorphism.h lesson13_vectors.cpp lesson13_vectors.h)